<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="edu.uconn.depressiontest.FormActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/form_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_description"
            android:textSize="10pt"
            android:layout_marginBottom="12dp"/>

        <!-- Question 1 -->
        <TextView
            android:id="@+id/question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_one">

        </TextView>
        <Spinner
            android:id="@+id/question_one_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_one"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 2 -->
        <TextView
            android:id="@+id/question_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_two">

        </TextView>
        <Spinner
            android:id="@+id/question_two_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_two"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 3 -->
        <TextView
            android:id="@+id/question_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_three">

        </TextView>
        <Spinner
            android:id="@+id/question_three_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_three"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 4 -->
        <TextView
            android:id="@+id/question_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_four">

        </TextView>
        <Spinner
            android:id="@+id/question_four_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_four"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 5 -->
        <TextView
            android:id="@+id/question_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_five">

        </TextView>
        <Spinner
            android:id="@+id/question_five_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_five"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 6 -->
        <TextView
            android:id="@+id/question_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_six">

        </TextView>
        <Spinner
            android:id="@+id/question_six_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_six"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 7 -->
        <TextView
            android:id="@+id/question_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_seven">

        </TextView>
        <Spinner
            android:id="@+id/question_seven_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_seven"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 8 -->
        <TextView
            android:id="@+id/question_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_eight">

        </TextView>
        <Spinner
            android:id="@+id/question_eight_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_eight"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <!-- Question 9 -->
        <TextView
            android:id="@+id/question_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/question_nine">

        </TextView>
        <Spinner
            android:id="@+id/question_nine_spinner"
            android:layout_height="wrap_content"
            android:prompt="@string/question_nine"
            android:layout_width="fill_parent"
            android:entries="@array/response_list"
            android:dropDownWidth="match_parent"
            android:background="?attr/colorButtonNormal"
            android:textSize="8pt"
            android:padding="6dp">
        </Spinner>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="submitForm"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textSize="8pt"
            android:text="@string/submit_button"/>

    </LinearLayout>
</ScrollView>
